# chatbot

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  asgi.py  flask_app.py  main.py  models.py  pyproject.toml  requirements.txt  wsgi.py  wsgi_app.py
static/css/: styles.css
static/js/: script.js
templates/: index.html
utils/: document_processor.py  openai_utils.py  request_limiter.py  vector_store.py  web_scraper.py
